--- a/style.css
+++ b/style.css
@@ -19,15 +19,26 @@ body {
 }
 
 .card {
-    width: 350px;
+    width: 300px;
     border-bottom: 1px solid #6760fb;  
 }
 
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
 .card-header {
+    display: flex;
+    justify-content: space-between;
     background: #6760fb;
     padding: 0.8rem;
     width: 100%;
     color: #f0f0f0;
+    font-size: 0.8rem;
 }
 
 .card-action {
@@ -41,18 +52,19 @@ body {
 .card-data {
     color: #f0f0f0;
     padding: 1rem;
+    font-size: 0.8rem;
 }
 
 .btn-action {
     cursor: pointer;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     background: none;
     color: #f0f0f0;
     transition: .4s ease;
 }
 
 #btn-edit:hover {
-    color: #6760fb;
+    color: #4efc4e;
 }
 
 #btn-delete:hover {
