--- a/styles/report.css
+++ b/styles/report.css
@@ -25,10 +25,19 @@ body {
 
 .card-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex-direction: column;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 40px;
+    padding: 4rem;
+}
+
+.title-box {
+    color: #f0f0f0;
+    padding: 0rem 0rem 0.8rem 0rem;
+    text-align: center;
+    width: 100%;
 }
 
 .card-header {
